Corrected spacing between bar divs using outline styling instead of border

--- a/src/index.css
+++ b/src/index.css
@@ -13,7 +13,8 @@ h1 {
 
 #barContainer div {
 	display:inline-block;
-	border:1px solid black;
+	outline:1px solid black;
+	outline-offset: -2px;
 	position:absolute;
 	bottom:0;
 }
